# agent-forge

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  install.sh  pyproject.toml  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  feedback.yml
.github/workflows/: ci.yml
agents/: agent-builder.md  code-architect.md  code-simplifier.md  csharp-developer.md  devops-agent.md  fullstack-dev.md  learning-agent.md  market-analyst.md  ml-engineer.md  orchestrator.md  project-manager.md  prompt-engineer.md  python-engineer.md  tech-scout.md
autonomous-agent/: README.md  agent_control.py  config.json.example  requirements.txt  run_agent.py
autonomous-agent/core/: __init__.py  agent.py  agent_dispatcher.py  approval_system.py  autonomous_triggers.py  context_builder.py  decision_engine.py  notifier.py  task_executor.py  task_queue.py  unified_memory.py
benchmarks/: README.md  bench_agents.py  bench_memory.py  bench_sense.py  run_benchmarks.py
cadre_ai/: __init__.py  cli.py  plugins.py
commands/: analyze-patterns.md  commit.md  context.md  fix-and-commit.md  list-skills.md  memory.md  pipeline.md  render.md  resume.md  review-and-fix.md  skill-info.md  skills.md  status.md  system-bridge.md  tasks.md  use-skill.md  voice.md
demo/: README.md  demo_output.txt  record_demo.sh
docs/: ARCHITECTURE.md  CREATING_AGENTS.md  CREATING_SKILLS.md  HOOKS.md  MACOS.md  MCP_SERVERS.md  PLUGINS.md  QUICK_START.md  TROUBLESHOOTING.md  comparison-openclaw.html
examples/developer/: CLAUDE.md  settings.json
examples/minimal/: CLAUDE.md  settings.json
examples/power-user/: CLAUDE.md  settings.json
framework/: agent-preamble.md  strong-agent.md
framework/common-sense/: inject.py  kernel.md  sense.py
hooks/post-tool-use/: auto_format.sh
hooks/pre-tool-use/: pre_commit_guard.py
hooks/session-start/: start_services.sh
plugins/: README.md  registry.json
powershell-bridge/: README.md  bridge.py  client.py  manage.py
proactive/: README.md  __init__.py  calendar_monitor.py  email_monitor.py  evening_summary.py  morning_briefing.py  notify_channels.py  scheduler.py  smart_notify.py  tracker_state.py  weekly_routines.py
system-bridge/: README.md  daemon.py  macos_automation.py  macos_bridge.py  notification_system.py  project_intelligence.py  watchdog.py  workflow_engine.py
templates/: CLAUDE.md.template  WORKFLOWS.md.template  settings.json.template  settings.local.json.template
tests/: validate_agents.py  validate_configs.py
(+17 files in other folders)
